# coreSNTP

./: .gitmodules  .lgtm.yml  CHANGELOG.md  CMakeLists.txt  MISRA.md  MigrationGuide.md  README.md  coreSntpFilePaths.cmake  lexicon.txt  manifest.yml  sbom.spdx
.github/: .cSpellWords.txt  memory_statistics_config.json  pull_request_template.md
_data/: doc_config.json
docs/doxygen/code_examples/: CMakeLists.txt  example_sntp_client_posix.c
latest/: globals_eval.html  group__sntp__constants.html  group__sntp__struct__types.html  modules.js
main/: annotated.html  classes.html  code_example.html  core__sntp__client_8c.html  core__sntp__client_8h.html  core__sntp__client_8h_source.html  core__sntp__config__defaults_8h.html  core__sntp__config__defaults_8h_source.html  core__sntp__serializer_8c.html  core__sntp__serializer_8h.html  core__sntp__serializer_8h_source.html  core_sntp_config.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__sntp__callback__types.html  group__sntp__callback__types.js  group__sntp__constants.html  group__sntp__enum__types.html  group__sntp__enum__types.js  group__sntp__struct__types.html  index.html  modules.html  navtreedata.js  navtreeindex0.js  pages.html  sntp_calculatepollinterval_function.html  sntp_converttounixtime_function.html  sntp_deserializeresponse_function.html  sntp_functions.html  (+12 more)
source/: core_sntp_client.c  core_sntp_serializer.c  core_sntp_serializer.c.uncrustify
test/: CMakeLists.txt
test/cbmc/include/: core_sntp_cbmc_state.h  core_sntp_config.h  core_sntp_stubs.h
test/cbmc/proofs/: Makefile-project-defines  Makefile-template-defines
test/cbmc/proofs/Sntp_CalculatePollInterval/: Makefile  README.md  Sntp_CalculatePollInterval_harness.c
test/cbmc/proofs/Sntp_ConvertToUnixTime/: Makefile  README.md  Sntp_ConvertToUnixTime_harness.c
test/cbmc/proofs/Sntp_DeserializeResponse/: Makefile  README.md  Sntp_DeserializeResponse_harness.c
test/cbmc/proofs/Sntp_Init/: Makefile  README.md  Sntp_Init_harness.c
test/cbmc/proofs/Sntp_ReceiveTimeResponse/: Makefile  README.md  Sntp_ReceiveTimeResponse_harness.c
test/cbmc/proofs/Sntp_SendTimeRequest/: Makefile  README.md  Sntp_SendTimeRequest_harness.c
test/cbmc/proofs/Sntp_SerializeRequest/: Makefile  README.md  Sntp_SerializeRequest_harness.c
test/cbmc/sources/: core_sntp_cbmc_state.c
test/cbmc/stubs/: core_sntp_stubs.c
test/include/: core_sntp_config.h
test/unit-test/: CMakeLists.txt  core_sntp_client_utest.c  core_sntp_config.h  core_sntp_serializer_utest.c
v1.0.0/: annotated.html  classes.html  code_example.html  core__sntp__client_8c.html  core__sntp__client_8c.js  core__sntp__client_8h.html  core__sntp__client_8h.js  core__sntp__client_8h_source.html  core__sntp__config__defaults_8h.html  core__sntp__config__defaults_8h_source.html  core__sntp__serializer_8c.html  core__sntp__serializer_8h.html  core__sntp__serializer_8h_source.html  core_sntp_config.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__sntp__callback__types.html  group__sntp__constants.html  group__sntp__enum__types.html  group__sntp__struct__types.html  index.html  modules.html  navtreeindex0.js  pages.html  sntp_calculatepollinterval_function.html  sntp_converttounixtime_function.html  sntp_deserializeresponse_function.html  sntp_functions.html  sntp_functions.js  (+13 more)
v1.1.0/: annotated.html  classes.html  core__sntp__client_8c.html  core__sntp__client_8h.html  core__sntp__config__defaults_8h.html  core__sntp__config__defaults_8h.js  core__sntp__serializer_8c.html  core__sntp__serializer_8c.js  core__sntp__serializer_8h.html  core__sntp__serializer_8h.js  core__sntp__serializer_8h_source.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__sntp__callback__types.html  group__sntp__constants.html  group__sntp__constants.js  group__sntp__struct__types.html  group__sntp__struct__types.js  sntp_calculatepollinterval_function.html  sntp_converttounixtime_function.html  sntp_deserializeresponse_function.html  sntp_init_function.html  sntp_receivetimeresponse_function.html  sntp_sendtimerequest_function.html  sntp_serializerequest_function.html  struct_sntp_authentication_interface__t.html  struct_sntp_context__t.html  struct_sntp_packet__t.html  struct_sntp_timestamp__t.html  struct_udp_transport_interface__t.html
v1.2.0/: classes.html  core__sntp__client_8h_source.html  core__sntp__config__defaults_8h.html  core__sntp__serializer_8c.html  dir_49e56c817e5e54854c35e136979f97ca.html  files.js  functions_vars.html  globals_defs.html  globals_eval.html  globals_func.html  group__sntp__enum__types.html  group__sntp__struct__types.html  modules.html  navtreedata.js  sntp_functions.html  sntp_init_function.html  sntp_receivetimeresponse_function.html  sntp_serializerequest_function.html  struct_sntp_authentication_interface__t.html  struct_sntp_context__t.html  struct_sntp_server_info__t.html
v1.3.1/: core__sntp__client_8h_source.html  globals_enum.html  sntp_init_function.html  struct_sntp_authentication_interface__t.html
v2.0.0/: annotated.html  classes.html  core__sntp__client_8h.html  core__sntp__config__defaults_8h.html  functions.html  globals.html  index.html  (+10 more)
(+82 files in other folders)
